vercre-wallet/tests/snapshots/issuance__credential-saved.snap
---
source: vercre-wallet/tests/issuance.rs
assertion_line: 179
expression: app.view(&model)
---
issuer: ""
offered: {}
status: Inactive

