vercre-wallet/tests/snapshots/issuance__pin.snap
---
source: vercre-wallet/tests/issuance.rs
assertion_line: 104
expression: app.view(&model)
---
issuer: "http://credibil.io"
offered:
  EmployeeID_JWT:
    format: jwt_vc_json
    scope: EmployeeIDCredential
    cryptographic_binding_methods_supported:
      - "did:jwk"
      - "did:ion"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          uri: "https://credibil.github.io/assets/credibil-logo-reversed.png"
          alt_text: Credibil Logo
        description: Credibil employee ID credential
        background_color: "#323ed2"
        background_image:
          uri: "https://credibil.github.io/assets/credibil-background.png"
          alt_text: Credibil Background
        text_color: "#ffffff"
    credential_definition:
      "@context":
        - "https://www.w3.org/2018/credentials/v1"
        - "https://www.w3.org/2018/credentials/examples/v1"
      type:
        - VerifiableCredential
        - EmployeeIDCredential
      credentialSubject:
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        familyName:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        givenName:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
status: Accepted
