vercre-wallet/tests/snapshots/issuance__signed.snap
---
source: vercre-wallet/tests/issuance.rs
assertion_line: 186
expression: app.view(&model)
---
issuer: "http://credibil.io"
offered: "{\"EmployeeID_JWT\":{\"credential_definition\":{\"@context\":[\"https://www.w3.org/2018/credentials/v1\",\"https://www.w3.org/2018/credentials/examples/v1\"],\"credentialSubject\":{\"email\":{\"display\":[{\"locale\":\"en-NZ\",\"name\":\"Email\"}],\"mandatory\":true,\"value_type\":\"string\"},\"familyName\":{\"display\":[{\"locale\":\"en-NZ\",\"name\":\"Family name\"}],\"mandatory\":true,\"value_type\":\"string\"},\"givenName\":{\"display\":[{\"locale\":\"en-NZ\",\"name\":\"Given name\"}],\"mandatory\":true,\"value_type\":\"string\"}},\"type\":[\"VerifiableCredential\",\"EmployeeIDCredential\"]},\"credential_signing_alg_values_supported\":[\"ES256K\",\"EdDSA\"],\"cryptographic_binding_methods_supported\":[\"did:jwk\",\"did:ion\"],\"display\":[{\"background_color\":\"#323ed2\",\"background_image\":{\"alt_text\":\"Credibil Background\",\"uri\":\"https://credibil.github.io/assets/credibil-background.png\"},\"description\":\"Credibil employee ID credential\",\"locale\":\"en-NZ\",\"logo\":{\"alt_text\":\"Credibil Logo\",\"uri\":\"https://credibil.github.io/assets/credibil-logo-reversed.png\"},\"name\":\"Employee ID\",\"text_color\":\"#ffffff\"}],\"format\":\"jwt_vc_json\",\"proof_types_supported\":{\"jwt\":{\"proof_signing_alg_values_supported\":[\"ES256K\",\"EdDSA\"]}},\"scope\":\"EmployeeIDCredential\"}}"
status: Requested
